atualização de estilo - melhorias em detalhes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" type="text/css" href="css/skills.css">
   <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/effect-text-hero.css">
-  <script src="js/language-selector.js"></script>
   <script src="js/carousel-slide.js"></script>
   <script src="js/drawerMenuHandler.js"></script>
   <script src="js/animation-service.js"></script>
@@ -36,7 +35,7 @@
 <body>
   <header class="no-drawer">
     <div class="logo">
-      <img src="design/logo/logo simples.png" alt="Logo">
+      <a href="#"><img src="design/logo/logo simples.png" alt="Logo"></a>
     </div>
     <nav>
       <ul>
@@ -62,7 +61,7 @@
       <i class="fa-solid fa-bars fa-2xl"></i>
     </button>
     <div class="logo">
-      <img src="design/logo/logo_box_preenchido.png" alt="Logo">
+      <a href="#"><img src="design/logo/logo_box_preenchido.png" alt="Logo"></a>
     </div>
   </header>
   <div class="drawer-menu-container" id="bar-drawer-menu">
@@ -535,6 +534,101 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
+              <img src="design/portifolio/dashboard/dashsocial1.jpg" class="expandable" alt="Primeiro Slide">
+              <div class="text">
+                <h3>Dashboard Redes Sociais - Power BI</h3>
+                <p>Tela de performance no TikTok</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial2.jpg" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela de análise temporal da performance no TikTok</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial7.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de performance no LinkedIn</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial8.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de análise temporal da performance no LinkedIn</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial3.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de performance no Instagram</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial4.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de análise temporal da performance no Instagram</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial5.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de performance no Facebook</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashsocial6.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de análise temporal da performance no Facebook</p>
+              </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots">
+              <span class="dot active"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+        </section>
+        <section class="section-projeto">
+          <div class="carousel">
+            <div class="slide active">
+              <img src="design/portifolio/dashboard/dashvendas.jpg" class="expandable" alt="Primeiro Slide">
+              <div class="text">
+                <h3>Dashboard Vendas - Power BI</h3>
+                <p>Tela de visão geral das metas e da variação mensal</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashvendas2.jpg" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela Leads Gerados de Pessoa Física</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashvendas3.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela Leads Gerados de Pessoa Jurídica</p>
+              </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots">
+              <span class="dot active"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+        </section>
+        <section class="section-projeto">
+          <div class="carousel">
+            <div class="slide active">
               <img src="design/portifolio/dashboard/dashfinanceiro.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Orçamentário - Power BI</h3>
@@ -558,83 +652,52 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="design/portifolio/dashboard/dashvendas.png" class="expandable" alt="Primeiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_principal.jpg" class="expandable" alt="Primeiro Slide">
               <div class="text">
-                <h3>Dashboard Vendas - Power BI</h3>
-                <p>Tela de visão geral das metas e da variação mensal</p>
+                <h3>Sistema de Contas a Pagar - Excel VBA</h3>
+                <p>Tela principal como os principais campos de cadastro da conta</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashvendas2.png" class="expandable" alt="Segundo Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_parcelas.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela Leads Gerados de Pessoa Física</p>
+                <p>Tela para cadastro de parcelas</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashvendas3.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_rateio.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <h3>Título do terceiro slide</h3>
-                <p>Tela Leads Gerados de Pessoa Jurídica</p>
-              </div>
-            </div>
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
-            <div class="dots">
-              <span class="dot active"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-            </div>
-          </div>
-        </section>
-        <section class="section-projeto">
-          <div class="carousel">
-            <div class="slide active">
-              <img src="design/portifolio/dashboard/dashsocial1.png" class="expandable" alt="Primeiro Slide">
-              <div class="text">
-                <h3>Dashboard Redes Sociais - Power BI</h3>
-                <p>Tela de performance no TikTok</p>
+                <p>Tela para cadastro de rateio</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial2.png" class="expandable" alt="Segundo Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_impostos.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela de análise temporal da performance no TikTok</p>
+                <p>Tela para cadastro de impostos</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial7.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_lista_projetos.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela de performance no LinkedIn</p>
+                <p>Tela com a listagem dos projetos existentes</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial8.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_cadastro_projeto.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela de análise temporal da performance no LinkedIn</p>
+                <p>Tela para cadastro de projetos</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial3.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_cadastro_fornecedor.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela de performance no Instagram</p>
+                <p>Tela para cadastro de fornecedores</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial4.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/excel/sistema_contaspagar/tela_lancamentos.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
-                <p>Tela de análise temporal da performance no Instagram</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial5.png" class="expandable" alt="Terceiro Slide">
-              <div class="text">
-                <p>Tela de performance no Facebook</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="design/portifolio/dashboard/dashsocial6.png" class="expandable" alt="Terceiro Slide">
-              <div class="text">
-                <p>Tela de análise temporal da performance no Facebook</p>
+                <p>Tela com histórico de lançamentos</p>
               </div>
             </div>
             <button class="prev">&#10094;</button>
@@ -654,20 +717,20 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="design/portifolio/dashboard/dashemail.png" class="expandable" alt="Primeiro Slide">
+              <img src="design/portifolio/dashboard/dashemail.jpg" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Gestão E-mails Marketing - Power BI</h3>
                 <p>Tela principal com indicadores, informações geras e listagem de e-mail disparados</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashemail2.png" class="expandable" alt="Segundo Slide">
+              <img src="design/portifolio/dashboard/dashemail2.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de detalhamento de e-mail marketing selecionado</p>
               </div>
             </div>
             <div class="slide">
-              <img src="design/portifolio/dashboard/dashemail3.png" class="expandable" alt="Terceiro Slide">
+              <img src="design/portifolio/dashboard/dashemail3.jpg" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance dos e-mails marketing selecionados</p>
               </div>
