add new tools and skills and remove function name on hero section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="hero-content">
         <div class="hero-image"></div>
         <div class="hero-text">
-          <h1><span class="name-text">Olá, eu sou Vinícius</span><br>Desenvolvedor Full Stack</h1>
+          <h1><span class="name-text">Olá, eu sou Vinícius</span><br></h1>
           <p class="biography">Formando em Análise e Desenvolvimento de Sistemas pela Universidade Presbiteriana Mackenzie, com       expertize em projetos de TI como desenvolvimento de aplicações web, websites, análise de dados, criação de dashboards, automação de tarefas e planilhas. 
           </p>
           <div class="contact-info">
@@ -318,6 +318,24 @@
             </div>
           </div>
         </div>
+        <div class="skill-card">
+          <img src="design/tecnologias e ferramentas/logos/netBeans.png" alt="NetBeans Logo">
+          <div class="skill-info">
+            <h4>NetBeans IDE</h4>
+            <div class="progress-bar">
+              <div class="progress" style="width: 50%;"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <img src="design/tecnologias e ferramentas/logos/eclipse.png" alt="Eclipse Logo">
+          <div class="skill-info">
+            <h4>Eclipse IDE</h4>
+            <div class="progress-bar">
+              <div class="progress" style="width: 50%;"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   
@@ -328,21 +346,7 @@
           <i class="fa-solid fa-bookmark"></i>
           <div class="experience-info">
             <h4>Arquitetura em Nuvem</h4>
-            <p>princípios de rede, armazenamento, máquinas virtuais, segurança na nuvem e escalabilidade.</p>
-          </div>
-        </div>
-        <div class="experience-card">
-          <i class="fa-solid fa-bookmark"></i>
-          <div class="experience-info">
-            <h4>Banco de Dados Relacionais e Não Relacionais</h4>
-            <p>experiência com consultas SQL, administração de bancos de dados, gerenciamento de acesso, criação de políticas e grupos, configuração de relacionamentos em bancos relacionais.</p>
-          </div>
-        </div>
-        <div class="experience-card">
-          <i class="fa-solid fa-bookmark"></i>
-          <div class="experience-info">
-            <h4>Práticas de ETL (Extract, Transform, Load)</h4>
-            <p>habilidade em conectar fontes de dados, realizar limpeza e padronização, contextualizar, validar e carregar dados com precisão.</p>
+            <p>Princípios de rede, armazenamento, máquinas virtuais, segurança na nuvem e escalabilidade.</p>
           </div>
         </div>
         <div class="experience-card">
@@ -350,13 +354,6 @@
           <div class="experience-info">
             <h4>Desenvolvimento Web</h4>
             <p>Criação de páginas responsivas, uso de animações e efeitos modernos, aplicação de CSS mobile first e design centrado em UX/UI.</p>
-          </div>
-        </div>
-        <div class="experience-card">
-          <i class="fa-solid fa-bookmark"></i>
-          <div class="experience-info">
-            <h4>Gerenciamento do Microsoft Office 365</h4>
-            <p>Automatização de tarefas, gerenciamento eficiente de acesso, criação de perfis personalizados e listas de distribuição, integração de aplicativos e colaboração/suporte para equipe.</p>
           </div>
         </div>
         <div class="experience-card">
@@ -371,6 +368,34 @@
           <div class="experience-info">
             <h4>Planilhas Excel Avançadas</h4>
             <p>Criação de formulários, regras de formatação complexas, uso avançado de fórmulas, macros, validação de dados, suplementos, dashboards interativos e automações completas com VBA.</p>
+          </div>
+        </div>
+        <div class="experience-card">
+          <i class="fa-solid fa-bookmark"></i>
+          <div class="experience-info">
+            <h4>Banco de Dados Relacionais e Não Relacionais</h4>
+            <p>Consultas SQL, administração de bancos de dados, gerenciamento de acesso, criação de políticas e grupos, configuração de relacionamentos em bancos relacionais.</p>
+          </div>
+        </div>
+        <div class="experience-card">
+          <i class="fa-solid fa-bookmark"></i>
+          <div class="experience-info">
+            <h4>Modelagem de Dados</h4>
+            <p>Criação de modelos de dados conceituais, lógicos e físicos, utilizando ferramentas como ERD, álgebra relacional e normalização de dados.</p>
+          </div>
+        </div>      
+        <div class="experience-card">
+          <i class="fa-solid fa-bookmark"></i>
+          <div class="experience-info">
+            <h4>Práticas de ETL (Extract, Transform, Load)</h4>
+            <p>Habilidade em conectar fontes de dados, realizar limpeza e padronização, contextualizar, validar e carregar dados com precisão.</p>
+          </div>
+        </div>
+        <div class="experience-card">
+          <i class="fa-solid fa-bookmark"></i>
+          <div class="experience-info">
+            <h4>Gerenciamento do Microsoft Office 365</h4>
+            <p>Automatização de tarefas, gerenciamento eficiente de acesso, criação de perfis personalizados e listas de distribuição, integração de aplicativos e colaboração/suporte para equipe.</p>
           </div>
         </div>
         <div class="experience-card">
@@ -649,6 +674,38 @@
             </div>
           </div>
         </section>
+        
+        <section class="section-projeto">
+          <div class="carousel">
+            <div class="slide active">
+              <img src="design/portifolio/dashboard/dashemail.jpg" class="expandable" alt="Primeiro Slide">
+              <div class="text">
+                <h3>Dashboard Gestão E-mails Marketing - Power BI</h3>
+                <p>Tela principal com indicadores, informações geras e listagem de e-mail disparados</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashemail2.jpg" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela de detalhamento de e-mail marketing selecionado</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="design/portifolio/dashboard/dashemail3.jpg" class="expandable" alt="Terceiro Slide">
+              <div class="text">
+                <p>Tela de análise temporal da performance dos e-mails marketing selecionados</p>
+              </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots">
+              <span class="dot active"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+        </section>
+
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
@@ -709,36 +766,6 @@
               <span class="dot"></span>
               <span class="dot"></span>
               <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-            </div>
-          </div>
-        </section>
-        <section class="section-projeto">
-          <div class="carousel">
-            <div class="slide active">
-              <img src="design/portifolio/dashboard/dashemail.jpg" class="expandable" alt="Primeiro Slide">
-              <div class="text">
-                <h3>Dashboard Gestão E-mails Marketing - Power BI</h3>
-                <p>Tela principal com indicadores, informações geras e listagem de e-mail disparados</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="design/portifolio/dashboard/dashemail2.jpg" class="expandable" alt="Segundo Slide">
-              <div class="text">
-                <p>Tela de detalhamento de e-mail marketing selecionado</p>
-              </div>
-            </div>
-            <div class="slide">
-              <img src="design/portifolio/dashboard/dashemail3.jpg" class="expandable" alt="Terceiro Slide">
-              <div class="text">
-                <p>Tela de análise temporal da performance dos e-mails marketing selecionados</p>
-              </div>
-            </div>
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
-            <div class="dots">
-              <span class="dot active"></span>
               <span class="dot"></span>
               <span class="dot"></span>
             </div>
@@ -806,8 +833,8 @@
               </svg>
             </div>
             <div class="card-subject">
-              <h2>Agências</h2>
-              <p>Procuram oferecer aplicações valiosas para otimizar e impulsionar suas operações.</p>
+              <h2>Agências de Tecnologia</h2>
+              <p>Procuram por aplicações valiosas e de qualidade para atender seus as necessidades de seus clientes.</p>
             </div>
           </div>
         </div>
@@ -882,7 +909,7 @@
             </div>
             <div class="card-subject">
               <h2>Consultores de Tecnologia</h2>
-              <p>Buscam mão de obra terceirizada para oferecer aplicações de qualidade e melhor atender seus clientes.</p>
+              <p>Buscam mão de obra terceirizada para desenvolvimento de aplicações aos seus clientes.</p>
             </div>
           </div>
         </div>
